# warcraftlogs-analyzer

./: .gitignore  CHANGELOG.md  LICENSE  README.md  alembic.ini  crud.py  database.py  main.py  models.py  pyproject.toml  schemas.py  wcl_service.py
.devcontainer/: Dockerfile  devcontainer.json
alembic/: env.py
alembic/versions/: 01519e8a80f9_modify_report_model_columns_ms_.py  132eec3de389_initial_migration_with_all_tables.py  30af627fa7df_modify_fight_model_columns_to_match_.py  7a973e7aac37_add_damage_heal_death_event_tables.py
